<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/d_30">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:src="@drawable/logo_main" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_minus_20"
        android:gravity="center_horizontal|top">

        <View
            android:layout_width="@dimen/d_15"
            android:layout_height="@dimen/d_3"
            android:layout_marginStart="@dimen/d_80"
            android:layout_marginTop="@dimen/d_10"
            android:layout_marginEnd="@dimen/d_5"
            android:background="@color/orange" />

        <TextView
            android:layout_width="@dimen/d_217"
            android:layout_height="wrap_content"
            android:text="@string/txt_splash"
            android:textColor="@color/black"
            android:textSize="@dimen/d_16" />
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_50"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_send_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/d_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="@dimen/d_300"
            android:layout_height="@dimen/d_50"
            android:layout_marginTop="@dimen/d_20"
            android:background="@drawable/bg_login_edt"
            android:hint="@string/txt_phone"
            android:textSize="@dimen/d_20"
            android:paddingStart="@dimen/d_28"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/lightOrange"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/edt_pass"
            android:layout_width="@dimen/d_300"
            android:layout_height="@dimen/d_50"
            android:layout_marginTop="@dimen/d_10"
            android:background="@drawable/bg_login_edt"
            android:hint="@string/txt_pass"
            android:inputType="textPassword"
            android:paddingStart="@dimen/d_28"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/lightOrange" />

        <EditText
            android:id="@+id/edt_confirm_pass"
            android:layout_width="@dimen/d_300"
            android:layout_height="@dimen/d_50"
            android:layout_marginTop="@dimen/d_10"
            android:background="@drawable/bg_login_edt"
            android:hint="@string/txt_confirm_pass"
            android:inputType="textPassword"
            android:paddingStart="@dimen/d_28"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/lightOrange" />

        <TextView
            android:id="@+id/tv_create_new_pass"
            android:layout_width="@dimen/d_200"
            android:layout_height="@dimen/d_50"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/d_10"
            android:layout_marginTop="@dimen/d_15"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/txt_create_new_pass"
            android:textColor="@color/white"
            android:textSize="@dimen/d_20"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>