<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/d_30">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"
        android:background="@color/colorOrange"
        android:padding="@dimen/d_10">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/d_30"
            android:layout_height="@dimen/d_30"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/d_5"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white"
            android:contentDescription="@string/txt_car_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/d_20"
            android:gravity="center_vertical"
            android:text="@string/txt_car_info"
            android:textColor="@color/white"
            android:textSize="@dimen/s_20"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:padding="@dimen/d_10"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_car_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s_15"
                android:text="@string/txt_car_info"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <ImageView
                android:src="@drawable/ic_car_avt"
                android:layout_width="@dimen/d_44"
                android:layout_height="@dimen/d_44"
                android:contentDescription="@string/txt_car_info"
                />
            <TextView
                android:id="@+id/tv_car_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s_15"
                android:text="@string/txt_car_brand"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_car_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_car_status"
                android:textColor="@color/black"
                android:textSize="@dimen/s_15"
                android:layout_margin="@dimen/d_5"/>
            <TextView
                android:id="@+id/tv_car_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_car_speed"
                android:textColor="@color/black"
                android:textSize="@dimen/s_15"
                android:layout_margin="@dimen/d_5"/>
            <TextView
                android:id="@+id/tv_car_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_location"
                android:textColor="@color/black"
                android:textSize="@dimen/s_15"
                android:layout_margin="@dimen/d_5"
                />
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_56"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_observe"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login_edt"
            android:layout_margin="@dimen/d_10"
            android:text="@string/txt_monitor"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/s_12"/>
        <TextView
            android:id="@+id/tv_history"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login_edt"
            android:layout_margin="@dimen/d_10"
            android:text="@string/txt_time_line"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/s_12"/>
    </TableRow>
</LinearLayout>