<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="@dimen/d_30"
    android:background="@color/transparent_black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_gravity="center">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_50"
        android:background="@color/colorOrange"
        android:padding="@dimen/d_10">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/d_30"
            android:layout_height="@dimen/d_30"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/d_5"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/d_20"
            android:gravity="center_vertical"
            android:text="@string/txt_user_info_title"
            android:textColor="@color/white"
            android:textSize="@dimen/d_20"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/d_15"
        android:paddingEnd="@dimen/d_15"
        android:layout_marginTop="@dimen/d_25">
        <TextView
            android:text="@string/txt_user"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/d_18"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:text="@string/txt_user_name"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/d_18"
            android:layout_marginStart="@dimen/d_5"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/d_15"
        android:paddingEnd="@dimen/d_15"
        android:layout_marginTop="@dimen/d_5">
        <TextView
            android:text="@string/txt_phone_title"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/d_18"/>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textColor="@color/colorOrange"
            android:textSize="@dimen/d_18"
            android:layout_marginStart="@dimen/d_5"/>
    </TableRow>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:background="@color/colorOrange"
        android:layout_margin="@dimen/d_12"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_56"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_change_password"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login_edt"
            android:layout_margin="@dimen/d_10"
            android:text="@string/txt_change_pass"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/d_12"/>
        <TextView
            android:id="@+id/tv_update"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login_edt"
            android:layout_margin="@dimen/d_10"
            android:text="@string/txt_update"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/d_12"/>
    </TableRow>
    </LinearLayout>
</FrameLayout>