<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/d_10">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_car_status"
                android:layout_width="@dimen/d_60"
                android:layout_height="@dimen/d_80"
                android:src="@drawable/ic_car_ava_list_car" />

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/d_20">

                <TextView
                    android:id="@+id/tv_car_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_car_brand"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/d_18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_car_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_5"
                    android:text="@string/txt_car_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/d_16" />

                <TextView
                    android:id="@+id/tv_car_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_car_license_plate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/d_16" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_10">

                    <TextView
                        android:id="@+id/tv_monitor_car_btn"
                        android:layout_width="@dimen/d_120"
                        android:layout_height="@dimen/d_40"
                        android:background="@drawable/bg_login_edt"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/d_10"
                        android:text="@string/txt_monitor"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/d_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_time_line_btn"
                        android:layout_width="@dimen/d_120"
                        android:layout_height="@dimen/d_40"
                        android:layout_marginStart="@dimen/d_20"
                        android:background="@drawable/bg_login_edt"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/d_10"
                        android:text="@string/txt_time_line"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/d_16"
                        android:textStyle="bold" />
                </TableRow>

            </LinearLayout>
        </TableRow>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/d_20"
        android:layout_marginEnd="@dimen/d_20"
        android:background="@color/superLightGray" />


</LinearLayout>